@@ -20,8 +20,9 @@ package io.realm.internal;
 import java.util.Date;
 
 /**
- * Row wrapper that stubs all access with IllegalStateExceptions. This can be used instead of adding null checks
- * everywhere when the underlying Row accessor in Realm Core is no longer available.
+ * Row wrapper that stubs all access with IllegalStateExceptions except for isAttached. This can be used instead of
+ * adding null checks everywhere when the underlying Row accessor in Realm's underlying storage engine is no longer
+ * available.
  */
 public enum InvalidRow implements Row {
     INSTANCE;
@@ -168,7 +169,7 @@ public enum InvalidRow implements Row {
 
     @Override
     public boolean isAttached() {
-        throw getStubException();
+        return false;
     }
 
     @Override
